# ImageEditor

./: CMakeLists.txt  ImageEditor.tar  README.md  main.cpp
core/: BatchMain.h  Config.h  IMainSystem.h  ImageLayer.h  ImageLoader.cpp  ImageLoader.h  ImageProcessor.cpp  ImageProcessor.h  ImageWorker.h
gui/: ImageView.cpp  ImageView.cpp.new  ImageView.h  MainWindow.cpp  MainWindow.cpp.new  MainWindow.h
layer/: CageControlPointItem.cpp  CageControlPointItem.h  CageLayerItem.cpp  CageLayerItem.h  CageMesh.cpp  CageMesh.h  CageOverlayItem.cpp  CageOverlayItem.h  CenterHandleItem.cpp  CenterHandleItem.h  EditablePolygon.cpp  EditablePolygon.h  EditablePolygonItem.cpp  EditablePolygonItem.h  Layer.h  LayerItem.cpp  LayerItem.h  MaskLayer.cpp  MaskLayer.h  MaskLayerItem.cpp  MaskLayerItem.h  PerspectiveHandleItem.cpp  PerspectiveOverlay.cpp  PerspectiveOverlay.h  PerspectiveTransform.cpp  PerspectiveTransform.h  PolygonMaskLayerItem.cpp  PolygonMaskLayerItem.h  TransformHandleItem.cpp  TransformHandleItem.h  TransformOverlay.cpp  TransformOverlay.h
samples/: batch.pl
samples/debug/: test1.json
samples/misc/: config.ini
samples/projects/: imageeditor_batch1.json  imageeditor_batch2.json  imageeditor_batch3.json  imageeditor_batch4.json  imageeditor_batch5.json  imageeditor_batch6.json  imageeditor_batch7.json
undo/: AbstractCommand.cpp  AbstractCommand.h  CageMoveCommand.cpp  CageWarpCommand.cpp  CageWarpCommand.h  DeleteLayerCommand.cpp  DeleteLayerCommand.h  DeleteUndoEntryCommand.cpp  DeleteUndoEntryCommand.h  EditablePolygonCommand.cpp  EditablePolygonCommand.h  InvertLayerCommand.cpp  InvertLayerCommand.h  LassoCutCommand.cpp  LassoCutCommand.h  MaskPaintCommand.cpp  MaskPaintCommand.h  MirrorLayerCommand.cpp  MirrorLayerCommand.h  MoveLayerCommand.cpp  MoveLayerCommand.h  PaintCommand.cpp  PaintCommand.h  PaintStrokeCommand.cpp  PaintStrokeCommand.h  PerspectiveTransformCommand.cpp  PerspectiveTransformCommand.h  PerspectiveWarpCommand.cpp  PerspectiveWarpCommand.h  PolygonDeletePointCommand.cpp  PolygonDeletePointCommand.h  PolygonInsertPointCommand.cpp  PolygonInsertPointCommand.h  PolygonMovePointCommand.cpp  PolygonMovePointCommand.h  PolygonReduceCommand.h  PolygonSmoothCommand.cpp  PolygonSmoothCommand.h  PolygonTranslateCommand.cpp  PolygonTranslateCommand.h  (+2 more)
util/: BrushUtils.h  CageWarp.h  Compress.h  GeometryUtils.h  Interpolation.h  ItemDelegate.h  MaskUtils.h  QImageUtils.h  QUndoSortDialog.cpp  QUndoSortDialog.h  QWidgetUtils.h  QuadWarp.h  TriangleWarp.h
